--- a/DBClasses/DBClasses.csproj
+++ b/DBClasses/DBClasses.csproj
@@ -54,9 +54,9 @@
     <Compile Include="PackagesDB.cs" />
     <Compile Include="ProductsDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SupDelStatements.cs" />
     <Compile Include="SuppliersDB.cs" />
     <Compile Include="Utilities.cs" />
+    <Compile Include="ViewPackagesDB.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ConnectionSetup.resx">
