--- a/ThreadedProject2/ThreadedProject2.csproj
+++ b/ThreadedProject2/ThreadedProject2.csproj
@@ -33,7 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,11 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddSupplier.cs">
+    <Compile Include="AddSuppliers.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddSupplier.Designer.cs">
-      <DependentUpon>AddSupplier.cs</DependentUpon>
+    <Compile Include="AddSuppliers.Designer.cs">
+      <DependentUpon>AddSuppliers.cs</DependentUpon>
     </Compile>
     <Compile Include="CreateNewPackage.cs">
       <SubType>Form</SubType>
@@ -67,20 +66,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Suppliers.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Suppliers.Designer.cs">
-      <DependentUpon>Suppliers.cs</DependentUpon>
-    </Compile>
     <Compile Include="ViewPackages.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ViewPackages.Designer.cs">
       <DependentUpon>ViewPackages.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddSupplier.resx">
-      <DependentUpon>AddSupplier.cs</DependentUpon>
+    <EmbeddedResource Include="AddSuppliers.resx">
+      <DependentUpon>AddSuppliers.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreateNewPackage.resx">
       <DependentUpon>CreateNewPackage.cs</DependentUpon>
@@ -98,12 +91,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Suppliers.resx">
-      <DependentUpon>Suppliers.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="ViewPackages.resx">
       <DependentUpon>ViewPackages.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
