--- a/DBClasses/DBClasses.csproj
+++ b/DBClasses/DBClasses.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ConnectionString.cs" />
     <Compile Include="Package.cs" />
     <Compile Include="PackagesDB.cs" />
+    <Compile Include="Products.cs" />
     <Compile Include="ProductsDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SupDelStatements.cs" />
