--- a/ThreadedProject2/ThreadedProject2.csproj
+++ b/ThreadedProject2/ThreadedProject2.csproj
@@ -46,12 +46,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddSuppliers.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="AddSuppliers.Designer.cs">
-      <DependentUpon>AddSuppliers.cs</DependentUpon>
-    </Compile>
     <Compile Include="CreateNewPackage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +57,12 @@
     </Compile>
     <Compile Include="MainMenu.Designer.cs">
       <DependentUpon>MainMenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NewSupplier.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewSupplier.Designer.cs">
+      <DependentUpon>NewSupplier.cs</DependentUpon>
     </Compile>
     <Compile Include="ProductManagement.cs">
       <SubType>Form</SubType>
@@ -84,14 +84,14 @@
     <Compile Include="ViewPackages.Designer.cs">
       <DependentUpon>ViewPackages.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AddSuppliers.resx">
-      <DependentUpon>AddSuppliers.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="CreateNewPackage.resx">
       <DependentUpon>CreateNewPackage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainMenu.resx">
       <DependentUpon>MainMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewSupplier.resx">
+      <DependentUpon>NewSupplier.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProductManagement.resx">
       <DependentUpon>ProductManagement.cs</DependentUpon>
